Fix activty feed post text input alignment + fix submit button

--- a/css/library.css
+++ b/css/library.css
@@ -8510,6 +8510,7 @@ button.DialogButton._1qG6xUlNu-qvdhpSxwed5:active {
 }
 
 ._3x31AgESSlUqX3D4MTHv2m ._1JlC29Ic6L-QvL-39X_d-X, ._1JlC29Ic6L-QvL-39X_d-X {
+  align-content: center !important;
   font-weight: var(--zehn-size-weight-normal) !important;
   margin: 0 !important;
   box-sizing: border-box !important;
@@ -8639,11 +8640,12 @@ button.DialogButton._1qG6xUlNu-qvdhpSxwed5:active {
   height: 100% !important;
 }
 
-/* BUTTON THAT IS DISABLED WITHOUT THE ADDITIONAL CLASS */
-._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydRm {
+/* SUBMIT BUTTON THAT IS DISABLED WITHOUT THE ADDITIONAL CLASS */
+._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydR {
   font-weight: var(--zehn-size-weight-normal) !important;
   margin: 0 !important;
   filter: none !important;
+  transition: none !important;
   height: var(--zehn-size-button-dialog) !important;
   line-height: var(--zehn-size-button-dialog) !important;
   padding: var(--zehn-size-button-dialog-padding) !important;
@@ -8680,24 +8682,9 @@ button.DialogButton._1qG6xUlNu-qvdhpSxwed5:active {
   outline-color: var(--zehn-color-button-dialog-border-focus) !important;
 }
 
-._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydR ._3jvEkfXhmZjvEbkpEv5EsH {
-  color: var(--zehn-color-button-dialog-text-disabled) !important;
-}
-
-._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydR.bGfjajFo4DI-ULSQxw1KY ._3jvEkfXhmZjvEbkpEv5EsH {
-  color: var(--zehn-color-button-dialog-text) !important;
-}
-
-._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydR.bGfjajFo4DI-ULSQxw1KY:hover ._3jvEkfXhmZjvEbkpEv5EsH {
-  color: var(--zehn-color-button-dialog-text-hover) !important;
-}
-
-._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydR.bGfjajFo4DI-ULSQxw1KY:active ._3jvEkfXhmZjvEbkpEv5EsH {
-  color: var(--zehn-color-button-dialog-text-active) !important;
-}
-
-._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydR.bGfjajFo4DI-ULSQxw1KY:focus ._3jvEkfXhmZjvEbkpEv5EsH {
-  color: var(--zehn-color-button-dialog-text-focus) !important;
+._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydR ._3jvEkfXhmZjvEbkpEv5EsH, ._3x31AgESSlUqX3D4MTHv2m ._37e7DrDNmf1FmsMGA5y0A0 ._2JSyABqFEh-v_dwaTnBydR.bGfjajFo4DI-ULSQxw1KY ._3jvEkfXhmZjvEbkpEv5EsH {
+  transition: none !important;
+  color: inherit !important;
 }
 
 /* VIEW LATEST NEWS */
